remove comments from interproscan.sh file